--- a/src/passwordManager.web/passwordManager.web/passwordManager.web.csproj
+++ b/src/passwordManager.web/passwordManager.web/passwordManager.web.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\passwordManager.web.Client\passwordManager.web.Client.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
